# othello-game

./: .gitignore  README.md  api_server.py  othello.py  pyproject.toml  test_othello.py
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: models.py  routes.py
backend/app/game/: __init__.py
backend/tests/: test_othello.py
frontend/: deno.json  index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: othelloAPI.ts
frontend/src/components/: GameInfo.css  GameInfo.tsx  OthelloBoard.css  OthelloBoard.tsx
frontend/src/types/: game.ts
src/othello-game/: othello.py
src/python_copilot/: __init__.py  __main__.py
